--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,4 +1,4 @@
-<!-- {% include header.html %} -->
+{% include header.html %}
 
 {% if site.layout == 'stacked' %}
   <div class="container-lg py-6 p-responsive text-center">
