more and more taking shape

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -13,6 +13,13 @@ body {
 
 }
 
+/* Panels on experience page */
+/* .projects{ */
+/*     max-height:200px; */
+/*     max-width:200px; */
+/*     max-width:100%; */
+
+/* } */
 
 
 /* Global Fonts */
