need to fill out robotics projects sections

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -14,12 +14,11 @@ body {
 }
 
 /* Panels on experience page */
-/* .projects{ */
-/*     max-height:200px; */
-/*     max-width:200px; */
-/*     max-width:100%; */
+.projects{
+    background:#fff;
+    border-radius:15px;
 
-/* } */
+}
 
 
 /* Global Fonts */
