--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,9 @@
  <script src="{{ site.baseurl }}/bower_components/jquery/dist/jquery.min.js"></script>
  <script src="{{ site.baseurl }}/bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
- <script src="{{ site.baseurl }}/bower_components/masonry/dist/masonry.pkgd.min.js"></script> 
- <script src="{{ site.baseurl }}/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script> 
+ <script src="{{ site.baseurl }}/bower_components/masonry/dist/masonry.pkgd.min.js"></script>
+ <script src="{{ site.baseurl }}/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
  <script type="text/javascript" src="{{ site.baseurl }}/js/custom.js"></script>
- <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+ <link rel="shortcut icon" type="image/x-icon" href="/img/robot.ico">
  <meta charset="utf-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
