--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -9,11 +9,11 @@ body {
 /* Panels on experience page */
 .panel-default {
     background:black;
-    color:black
+    color:black;
+    margin:10px;
 
 }
 
-/* Panels on experience page */
 .projects{
     background:#fff;
     border-radius:15px;
