--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -549,7 +549,7 @@ footer.sticky-bottom {
   }
 
   h2.year {
-    color: var(--global-divider-color);
+    // color: var(--global-divider-color);
     border-top: 1px solid var(--global-divider-color);
     padding-top: 1rem;
     margin-top: 2rem;
