--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -48,7 +48,7 @@ layout: default
 
           <!-- Selected papers -->
           {% if page.selected_papers -%}
-            <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">select publications</a></h2>
+            <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">Select publications</a></h2>
             {%- include selected_papers.html %}
           {%- endif %}
 
