--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,30 +37,30 @@
           <div class="collapse navbar-collapse text-right" id="navbarNav">
             <ul class="navbar-nav ml-auto flex-nowrap">
 
+              <!-- add the REL_logo.png image -->
+              {%- if site.logo -%}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/">
+                  <img src="{{ site.baseurl }}/assets/img/{{ site.logo }}" alt="Logo" class="logo"
+                        style="max-height: 30px; max-width: 30px; margin-right: 0px;">
+                </a>
+              </li>
+              {%- endif -%}
+
               {%- for page in site.pages -%}
                 {% if page.permalink == '/' %}
-                  {% assign about_title = page.title %}
+                  {% assign home_title = page.title %}
                 {% endif %}
               {% endfor %}
 
-              <!-- About -->
+              <!-- Home -->
               <li class="nav-item {% if page.permalink == '/' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/' | relative_url }}">{{ about_title }}
+                <a class="nav-link" href="{{ '/' | relative_url }}">{{ home_title }}
                   {%- if page.permalink == '/' -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
                 </a>
               </li>
-              {% if site.blog_nav_title %}
-              <!-- Blog -->
-              <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/blog/' | relative_url }}">{{ site.blog_nav_title }}
-                  {%- if page.url contains 'blog' -%}
-                  <span class="sr-only">(current)</span>
-                  {%- endif -%}
-                </a>
-              </li>
-              {%- endif %}
 
               <!-- Other pages -->
               {%- assign sorted_pages = site.pages | sort: "nav_order" -%}
